--- a/Maintenance dashboard.Client/Views/CreatePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreatePaddleControl.xaml
@@ -9,39 +9,16 @@
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:PaddleViewModel}">
     <Grid >
-        <Border CornerRadius="20" >
-                <Border.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF2281D1"/>
-                        <GradientStop Color="#FF34288B" Offset="1"/>
-                        <GradientStop Color="#FF33288B" Offset="1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-            </Border>
+        <ContentControl Style="{StaticResource RectangleView}"/>
+
+        <ContentControl Style="{StaticResource AddingRecordGridTemplete}"/>
 
 
-            <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
-                       RenderTransformOrigin="0.5,0.5">
-                <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
-                                      ShadowDepth="1"/>
-                </Rectangle.Effect>
-            </Rectangle>
-
-            <Grid   Margin="15,15,15, 15"  x:Name="gridInfoAddToDataBase" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="Dodano do bazy danych" Foreground="Gray" Margin="10" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
-            </Grid>
-
-            <Grid x:Name="gridPrincipal" Margin="15,80,15, 15" >
+        <Grid x:Name="gridPrincipal" Margin="15,80,15, 15"  Grid.ZIndex="1">
                 <TextBlock Text="DODANIE NOWYCH PALETEK" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
-                <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Center">
+            <StackPanel HorizontalAlignment="Center"  VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
 
                     <WrapPanel>
                         <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
@@ -75,7 +52,7 @@
                     </WrapPanel>
                     <Button  x:Name="btnAddPaddle" Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreatePaddleCommand}" Click="btnAddPaddle_Click"/>
+                             Command="{Binding CreatePaddleCommand}"/>
 
                 </StackPanel>
             </Grid>
