--- a/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
@@ -9,61 +9,37 @@
              d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" 
              Width="750" Height="550" HorizontalAlignment="Left" VerticalAlignment="Top" >
     <Grid >
-        <Grid>
-            <Border CornerRadius="20" >
-                <Border.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF2281D1"/>
-                        <GradientStop Color="#FF34288B" Offset="1"/>
-                        <GradientStop Color="#FF33288B" Offset="1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-            </Border>
 
-            <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
-                       RenderTransformOrigin="0.5,0.5">
-                <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
-                                      ShadowDepth="1"/>
-                </Rectangle.Effect>
-            </Rectangle>
+        <ContentControl Style="{StaticResource RectangleView}"/>
+        <ContentControl Style="{StaticResource AddingRecordGridTemplete}"/>
 
-            <Grid   Margin="15,50,15, 15"  x:Name="gridInfoAddToDataBase" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="Dodano do bazy danych" Foreground="Gray" Margin="10" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
-            </Grid>
-
-            <Grid x:Name="gridPrincipal" Margin="15,80,15, 15" Width="700" Height="420">
-                <TextBlock Text="DODAWANIE WYPOSAŻENIA" HorizontalAlignment="Center" VerticalAlignment="Top"  
+        <Grid x:Name="gridPrincipal" Margin="15,80,15, 15" Width="700" Height="420">
+            <TextBlock Text="DODAWANIE WYPOSAŻENIA" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" />
 
-                <StackPanel  HorizontalAlignment="Center"  VerticalAlignment="Center">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
-                        <TextBox  Width="220" materialDesign:HintAssist.Hint="Nazwa wyposażenia"  x:Name="test"
+            <StackPanel  HorizontalAlignment="Center"  VerticalAlignment="Center" Style="{StaticResource AddingRecordDataTemplete}">
+                <WrapPanel>
+                    <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Nazwa wyposażenia"  x:Name="test"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                               materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                              Text="{Binding ToolName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
-                    </WrapPanel>
+                </WrapPanel>
 
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Code" VerticalAlignment="Center" Width="30" Height="30"/>
-                        <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="220"  
+                <WrapPanel>
+                    <materialDesign:PackIcon Kind="Code" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="220"  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding UidCode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
-                    </WrapPanel>
+                </WrapPanel>
 
 
-                    <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  
+                <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreateRegisterToolCommand}" Click="btnAddRegisterTool_Click"/>
+                             Command="{Binding CreateRegisterToolCommand}"/>
 
-                </StackPanel>
-            </Grid>
+            </StackPanel>
+
         </Grid>
     </Grid>
 </UserControl>
